# 7D2D-Utils

./: .gitignore  README.md  pyproject.toml
sdutils/: cli.py  config.py  utils.py
sdutils/commands/: build.py  new.py
sdutils/templates/: .csproj  ModApi.cs  ModConfig.xml  ModInfo.xml  gitignore.template  sdutils.json
